src/objects/Request_Tracking__c.object
<CustomObject>
    <description>To Track Notes on a Request record</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Complete_Date__c</fullName>
        <label>Estimated Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RWE_Request__c</fullName>
        <description>Parent Request</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Trackings</relationshipLabel>
        <relationshipName>RWE_Request_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request_Stage__c</fullName>
        <label>Request Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Requestor Action</fullName>
                </value>
                <value>
                    <fullName>Pending RWE Inc. Action</fullName>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Ready for Analysis</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Information/Review</fullName>
                </value>
                <value>
                    <fullName>Ready for Validation</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>​Initial Assessment</fullName>
                </value>
                <value>
                    <fullName>Scientific Assessment</fullName>
                </value>
                <value>
                    <fullName>Technical Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request Tracking</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <description>To ensure Estimated End Date &gt; Estimated Start Date</description>
        <errorConditionFormula>Estimated_Start_Date__c &gt; Estimated_Complete_Date__c</errorConditionFormula>
        <errorDisplayField>Estimated_Complete_Date__c</errorDisplayField>
        <errorMessage>Estimate Complete Date cannot be before Estimate Start Date.</errorMessage>
    </validationRules>
</CustomObject>